# astraos-trading

./: .env.example  .gitignore  .pyre_configuration  EXECUTION_PROMPT.md  Stock_FO_BankNifty_Study_Guide.md  app.js  build_satheesh_fertilizer_master_pdf.py  build_terrace_setup_pdf.py  docker-compose.yml  index.html  nginx.conf  pyrightconfig.json  render.yaml  skills-lock.json  stock_FO_banknifty.md  styles.css  youtube-channel-strategy.md
apps/api/: .dockerignore  Dockerfile  alembic.ini  init_db.py  pyproject.toml  pyrightconfig.json  requirements.render.txt  requirements.txt  train_model.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py  002_kill_switch_states.py
apps/api/data/creator_lessons/: stockvid_telugu_complete.json  stockvid_telugu_seed.json
apps/api/scripts/: build_rag_index.py  go_live_checklist.py  import_creator_lessons.py  test_angel.py  test_finbert.py  test_full_analysis.py  test_orchestrator.py  test_predictor_fix.py  test_real_trader.py  test_strategies.py  train_and_validate.py  train_improved.py  train_model.py  train_ultimate.py
apps/api/src/: __init__.py  main.py
apps/api/src/agents/: __init__.py  gpt_agent.py  ml_agent.py  orchestrator.py  outcome_tracker.py  real_trader_brain.py  research_agents.py
apps/api/src/broker/: __init__.py  angel_one_adapter.py  angel_one_unified.py  fivepaisa_adapter.py  fyers_adapter.py  groww_adapter.py  kite_adapter.py  paper_adapter.py  paper_unified.py  upstox_adapter.py
apps/api/src/core/: account_lockout.py  audit_log.py  config.py  database.py  (+7 more)
apps/api/tests/: conftest.py
(+166 files in other folders)
