[project]
name = "astraos-api"
version = "0.1.0"
description = "AstraOS — AI-native stock trading intelligence platform"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B"]
ignore = ["S101"]  # allow assert in tests
